--- a/home.html.html
+++ b/home.html.html
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
 <html>
- <head>
- <title> Portfolio Website</title>
-<link rel="stylesheet" href="website/indexstyle.css" />
+<head>
+<title> Portfolio Website</title>
+<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
- <div id="container">
- <div id="header"
-<h1>Welcome</h1>
-       
-</div>  
 
-<div id="content">
-<div id="nav">
+<h1>Welcome</h1>
 <ul>
       <li><a class="selected" href="">Home page</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
@@ -21,14 +14,8 @@
       <li><a href="sitereport.html">Site Report</a></li>
 </ul>
 
-</div>
-
-<div id="main">
 <p>Hi welcome. My name is kafayat and I am currently student at the university of Northampton <br /> This is my first website which also happens to be a Portfolio. The contents that will be displayed in this website will mainly be based on my work and my University coursework across the years. Please expect to see frequent updates and improvement on our page as we aim to acheive our goals. </p>
 
-
-</div>
-<div id="footer">
 copyright &copy; 2021 Kafayat Adesanya.
 
 </body>
