--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
 <head>
 <title> Contact Us</title>
 
+<link rel="stylesheet" href="csscontact/style.css" />
+
 </head>
 
 <body>
@@ -16,11 +18,12 @@
       <li><a href="cv.html">Our CV</a></li>
       <li><a href="sitereport.html">Site Report</a></li>
 </ul>
-     <form>
+</div>
 
- <div>
-<label>Name</label>
-<input>
+ <form action-"results.html" method="GET">
+<div>
+<label for-"name">Name</label>
+<input name-"name" id-"name">
 </div>
 
 <div>
@@ -37,10 +40,12 @@
 <label>Email Adresse</label>
 <input>
 </div>
-<button>submit</button>
+
+
+<button type-"submit">submit</button>
    </form>
 
-</div>
+
 <div id="footer">
 copyright &copy; 2021 Kafayat Adesanya.
 
