--- a/cv.html
+++ b/cv.html
@@ -2,32 +2,63 @@
 <html>
 <head>
 <title> My cv</title>
-</head>
-<!DOCTYPE html>
-<html>
-<head>
-<title> My cv</title>
+<link rel="stylesheet" href="csscv/style.css" />
 </head>
 <body>
 <h1> MY CV</h1>
 
 <div id="nav">
 <ul>
-      <li><a class="selected" href="cv.html">Our CV</a></li>
       <li><a href="home.html">Home page</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
       <li><a href="contact.html">Contact us</a></li>
+      <li><a class="selected" href="cv.html">Our CV</a></li>
       <li><a href="sitereport.html">Site Report</a></li>
 </ul>
 
 </div>
 <div id="main">
 
-<p>Here you are welcome to view and review my respective cv Below you'll be able to see and make use of the information provieded to you </p>
+<h4>Here you are welcome to view and review my respective cv Below you'll be able to see and make use of the information provieded to you </h4>
 </div>
-<img scr="C:\Users\kafay\Documents\Software engineering\Web Development\Assignment 1"/>
+
+<div class="left-col">
+<h2>Work Experience</h2>
+
+<p> Fixed Term contract. Part time Retail assistance. Located at Oxford Street London. From October 2019 to January 2020. </br>
+I was privileged to work as a retail assistance in Primark located at Marble arch one of the busiest Primark branch in London. </br>
+My main role was providing professional and friendly customer service as possible and making sure to  establish a pleasant customer </br>
+service experiences whilst also meeting needs specified to each customer. Warehouse Operative Northampton Temporary at Clipper’s Logistics Zara. </br> 
+From October 20th, 2020 to December 18th, 2020  I was mainly assigned in put away which consists of putting away the items into their designated containers. </br>
+Put-away meant that I was mostly working as a part of the distribution team to maintain the consistently high standards required to maintain the consistently </br>
+high standards required across the directory distribution operation. As we were set with at least 200 put-away per shifts this helped me build my skills working </br>
+in a fast-paced environment. With this I had to deal with a lot of numbers including stocks. This made me proficient in logistics operating systems warehouse and online orders </br>
+management systems. Children’s Tutor at Richer’s Education from June 2019 to August 2019. My time at Richer’s education was very short I was assigned with helping </br>
+young children between the ages of 6 to 10 with basic subjects such as Maths English Science and computing.</p>
 
 </div>
+
+<div class="center-col">
+<h2>Education</h2>
+<p> A levels at ST Charles Catholic College Located in London from September 2018 to June 2020. </br>
+Grades achieved were, English B, IT B, Economics C. GCSE Certificate at City of London Academy London </br>
+Grades Achieved are as followed, Math C, English B, Science B, Hospitality &Catering B, IT B and French Grade C. </br>
+And Finally I am currently a full time Computers Software Engineering Student at The University of Northampton. </br>
+</p>
+</div>
+
+<div class="right-col">
+<h2>Skills</h2>
+<p> My acquired skills are as followed; I am an Intelligent and highly focused individual, I always try to deliver </br>
+Great service and achieving targets. I am a keen team player, extremely organised, hardworking, and trustworthy. I am </br>
+well acquitted at handling cash and can provide great customer services; I am experienced in the retailing environment. </br>
+I know my way around most Microsoft office editors and programmes such as Excel and MS office.</p>
+
+
+</div>
+
+
+
 <div id="footer">
 copyright &copy; 2021 Kafayat Adesanya.
 
