--- a/index.html.html
+++ b/index.html.html
@@ -1,11 +1,16 @@
+<!Doctype html>
 <html>
 <head>
 <title> Portfolio Website</title>
+
+<meta name="viewport" content= "width=device-width, initial-scale.0">
+<h1>Welcome</h1>
+
 <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
-<h1>Welcome</h1>
+<div id="nav">
 <ul>
       <li><a class="selected" href="">Home page</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
@@ -13,10 +18,15 @@
       <li><a href="cv.html">Our CV</a></li>
       <li><a href="sitereport.html">Site Report</a></li>
 </ul>
+</div>
+<p>Hi welcome. My name is kafayat and I am currently student at the university of Northampton <br /> This is my first website which also happens to be a Portfolio.
+The contents that will be displayed <br /> in this website will mainly be based on my work and my University coursework across the years. <br /> Please expect to see frequent updates 
+and improvement on our page as we aim to acheive our goals. </p>
 
-<p>Hi welcome. My name is kafayat and I am currently student at the university of Northampton <br /> This is my first website which also happens to be a Portfolio. The contents that will be displayed in this website will mainly be based on my work and my University coursework across the years. Please expect to see frequent updates and improvement on our page as we aim to acheive our goals. </p>
-
+</div>
+<div id= "footer">
 copyright &copy; 2021 Kafayat Adesanya.
+</div>
 
 </body>
 </html>
