--- a/cv.html
+++ b/cv.html
@@ -61,15 +61,8 @@ I know my way around most Microsoft office editors and programmes such as Excel 
 
 <div id="footer">
 copyright &copy; 2021 Kafayat Adesanya.
-
-
-
-
+</div>
 
 
 </body>
-
-
-
-
 </html>
