--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,9 @@
       <li><a href="sitereport.html">Site Report</a></li>
 </ul>
 </div>
+<div>
 
- <form action-"results.html" method="GET">
+ <form action="results.html" method="GET">
 <div>
 <label for-"name">Name</label>
 <input name-"name" id-"name">
@@ -41,13 +42,20 @@
 <input>
 </div>
 
+<div>
+<label>Enquiry</label>
+<textarea name="name" rows="8" cols="50"></textarea>
+
+</div>
+
 
 <button type-"submit">submit</button>
    </form>
 
-
-<div id="footer">
+</div>
+<div id= "footer">
 copyright &copy; 2021 Kafayat Adesanya.
+</div>
 
 </body>
 </html>
