--- a/results.html
+++ b/results.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title> Form Result</title>
-<link rel="stylesheet" href="cssresults/style.css" />
+<link rel="stylesheet" href="Resultsstyle.css" />
 </head>
 
 <body>
@@ -15,7 +15,7 @@ the next 48hrs so keep a look out for our email.</p>
 
 <div id="nav">
 <ul>
- <a href="home.html">Back</a>
+ <a href="index.html">Back</a>
 </ul>
 </div>
 
