--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
 <title> Contact Us</title>
 
-<link rel="stylesheet" href="csscontact/style.css" />
+<link rel="stylesheet" href="Contactstyle.css" />
 
 </head>
 
@@ -12,7 +12,7 @@
 
 <div id="nav">
 <ul>
-      <li><a href="home.html">Home page</a></li>
+      <li><a href="index.html">Home page</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
       <li><a class="selected" href="contact.html">Contact us</a></li>
       <li><a href="cv.html">Our CV</a></li>
