--- a/cv.html
+++ b/cv.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <title> My cv</title>
-<link rel="stylesheet" href="csscv/style.css" />
+<link rel="stylesheet" href="CVstyle.css" />
 </head>
 <body>
 <h1> MY CV</h1>
 
 <div id="nav">
 <ul>
-      <li><a href="home.html">Home page</a></li>
+      <li><a href="index.html">Home page</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
       <li><a href="contact.html">Contact us</a></li>
       <li><a class="selected" href="cv.html">Our CV</a></li>
