--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content= "width=device-width, initial-scale.0">
 <h1>Welcome</h1>
 
-<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="Homestyle.css" />
 </head>
 <body>
 
